--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>USE_HAL_DRIVER,STM32F437xx,DEVICE</Define>
+              <Define>USE_HAL_DRIVER,STM32F437xx,DEVICE,DEBUG</Define>
               <Undefine></Undefine>
               <IncludePath>.\src;.\src\Hardware\FatFS;.\src\Hardware\HAL;.\src\Hardware\USBD;.\src\Hardware\USBH;..\;..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\common\libs\STM32Cube_F4\Drivers\CMSIS\Include;..\common\libs\STM32Cube_F4\Middlewares\Third_Party\FatFs\src;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Device_Library\Core\Inc;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Device_Library\Class\CDC\Inc;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\CDC\Inc</IncludePath>
             </VariousControls>
@@ -769,6 +769,11 @@
               <FileType>5</FileType>
               <FilePath>..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Device_Library\Core\Inc\usbd_core.h</FilePath>
             </File>
+            <File>
+              <FileName>usbd_core.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Device_Library\Core\Src\usbd_core.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1158,11 +1163,6 @@
               <FileName>usbd_conf.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Hardware\USBD\usbd_conf.h</FilePath>
-            </File>
-            <File>
-              <FileName>usbd_core.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\USBD\usbd_core.cpp</FilePath>
             </File>
             <File>
               <FileName>usbd_desc.cpp</FileName>
@@ -2360,11 +2360,6 @@
               <FilePath>.\src\Utils\Averager.h</FilePath>
             </File>
             <File>
-              <FileName>Averager.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Utils\Averager.cpp</FilePath>
-            </File>
-            <File>
               <FileName>Buffer.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Utils\Buffer.h</FilePath>
@@ -2483,6 +2478,11 @@
               <FileName>Values.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Utils\Values.h</FilePath>
+            </File>
+            <File>
+              <FileName>Averager.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\Averager.cpp</FilePath>
             </File>
           </Files>
         </Group>
