--- a/sources/Panel/Panel.uvprojx
+++ b/sources/Panel/Panel.uvprojx
@@ -1386,16 +1386,6 @@
               <FilePath>.\src\Display\Painter_common.h</FilePath>
             </File>
             <File>
-              <FileName>Averager.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\Averager.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Averager.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\Averager.h</FilePath>
-            </File>
-            <File>
               <FileName>Painter_stm.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Display\Painter_stm.cpp</FilePath>
@@ -1404,6 +1394,16 @@
               <FileName>Text_stm.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Display\Text_stm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>AveragerTester.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Display\AveragerTester.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>AveragerTester.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Display\AveragerTester.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2864,16 +2864,6 @@
               <FilePath>.\src\Display\Painter_common.h</FilePath>
             </File>
             <File>
-              <FileName>Averager.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\Averager.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Averager.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\Averager.h</FilePath>
-            </File>
-            <File>
               <FileName>Painter_stm.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Display\Painter_stm.cpp</FilePath>
@@ -2882,6 +2872,16 @@
               <FileName>Text_stm.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Display\Text_stm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>AveragerTester.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Display\AveragerTester.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>AveragerTester.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Display\AveragerTester.h</FilePath>
             </File>
           </Files>
         </Group>
