--- a/sources/Device/CMakeLists.txt
+++ b/sources/Device/CMakeLists.txt
@@ -152,17 +152,18 @@ file(GLOB MENU_PAGES_PAGESERVICE           src/Menu/Pages/PageService/*.h src/Me
 file(GLOB MENU_PAGES_PAGESERVICE_PAGEDEBUG src/Menu/Pages/PageService/PageDebug/*)
 file(GLOB MENU_PAGES_PAGETRIG              src/Menu/Pages/PageTrig/*)
 file(GLOB MULTIMETER                       src/Multimeter/*)
-file(GLOB _OSCI                            src/Osci/*.h src/Osci/*.cpp)
+file(GLOB OSCI                             src/Osci/*.h src/Osci/*.cpp)
 file(GLOB OSCI_DISPLAY                     src/Osci/Display/*)
 file(GLOB OSCI_MATH                        src/Osci/Math/*)
 file(GLOB OSCI_MEASUREMENTS                src/Osci/Measurements/*)
 file(GLOB RECORDER                         src/Recorder/*)
-file(GLOB _SCPI                            src/SCPI/*)
+file(GLOB SCPI                             src/SCPI/*)
 file(GLOB SETTINGS                         src/Settings/*)
 file(GLOB TEST                             src/Test/*)
 file(GLOB TESTER                           src/Tester/*)
 file(GLOB UTILS                            src/Utils/*.*)
 file(GLOB UTILS_CONTAINERS                 src/Utils/Containers/*.*)
+file(GLOB UTILS_TEXT                       src/Utils/Text/*.*)
 
 set_source_files_properties(${LIBS_FATFS} ${LIBS_HAL} ${LIBS_USBD} ${LIBS_USBH} PROPERTIES HEADER_FILE_ONLY TRUE)
 
@@ -200,17 +201,18 @@ source_group(Menu\\Pages\\PageService            FILES ${MENU_PAGES_PAGESERVICE}
 source_group(Menu\\Pages\\PageService\\PageDebug FILES ${MENU_PAGES_PAGESERVICE_PAGEDEBUG})
 source_group(Menu\\Pages\\PageTrig               FILES ${MENU_PAGES_PAGETRIG})
 source_group(Multimeter                          FILES ${MULTIMETER})
-source_group(Osci                                FILES ${_OSCI})
+source_group(Osci                                FILES ${OSCI})
 source_group(Osci\\Display                       FILES ${OSCI_DISPLAY})
 source_group(Osci\\Math                          FILES ${OSCI_MATH})
 source_group(Osci\\Measurements                  FILES ${OSCI_MEASUREMENTS})
 source_group(Recorder                            FILES ${RECORDER})
-source_group(SCPI                                FILES ${_SCPI})
+source_group(SCPI                                FILES ${SCPI})
 source_group(Settings                            FILES ${SETTINGS})
 source_group(Test                                FILES ${TEST})
 source_group(Tester                              FILES ${TESTER})
 source_group(Utils                               FILES ${UTILS})
 source_group(Utils/Containers                    FILES ${UTILS_CONTAINERS})
+source_group(Utils/Text                          FILES ${UTILS_TEXT})
 
 add_library(${PROJECT_NAME} ${COMMON} ${DOC} ${VS} ${VS_STD_INCLUDES} ${SRC} ${DISPLAY} ${DISPLAY_FONT} ${FDRIVE}
                             ${FPGA} ${FREQMETER} ${HARDWARE} ${HARDWARE_CMSIS} ${HARDWARE_HAL} ${HARDWARE_MEMORY}
@@ -218,7 +220,7 @@ add_library(${PROJECT_NAME} ${COMMON} ${DOC} ${VS} ${VS_STD_INCLUDES} ${SRC} ${D
                             ${KEYBOARD} ${MENU} ${MENU_PAGES} ${MENU_PAGES_INCLUDE} ${MENU_PAGES_PAGEDISPLAY}
                             ${MENU_PAGES_PAGEFUNCTION} ${MENU_PAGES_PAGERECORDER} ${MENU_PAGES_PAGEHELP}
                             ${MENU_PAGES_PAGEMEASURES} ${MENU_PAGES_PAGEMEMORY} ${MENU_PAGES_PAGESERVICE}
-                            ${MENU_PAGES_PAGESERVICE_PAGEDEBUG} ${MENU_PAGES_PAGETRIG} ${MULTIMETER} ${_OSCI}
-                            ${OSCI_DISPLAY} ${OSCI_MATH} ${OSCI_MEASUREMENTS} ${RECORDER} ${_SCPI} ${SETTINGS}
-                            ${TEST} ${TESTER} ${UTILS} ${UTILS_CONTAINERS}
+                            ${MENU_PAGES_PAGESERVICE_PAGEDEBUG} ${MENU_PAGES_PAGETRIG} ${MULTIMETER} ${OSCI}
+                            ${OSCI_DISPLAY} ${OSCI_MATH} ${OSCI_MEASUREMENTS} ${RECORDER} ${SCPI} ${SETTINGS}
+                            ${TEST} ${TESTER} ${UTILS} ${UTILS_CONTAINERS} ${UTILS_TEXT}
 )
