--- a/sources/Device/CMakeLists.txt
+++ b/sources/Device/CMakeLists.txt
@@ -167,52 +167,52 @@ file(GLOB UTILS_TEXT                       src/Utils/Text/*.*)
 
 set_source_files_properties(${LIBS_FATFS} ${LIBS_HAL} ${LIBS_USBD} ${LIBS_USBH} PROPERTIES HEADER_FILE_ONLY TRUE)
 
-source_group(common                              FILES ${COMMON})
-source_group(doc                                 FILES ${DOC})
-source_group(_VS                                 FILES ${VS})
-source_group(_VS\\std_includes                   FILES ${VS_STD_INCLUDES})
-source_group(src                                 FILES ${SRC})
-source_group(Display                             FILES ${DISPLAY})
-source_group(Display\\Font                       FILES ${DISPLAY_FONT})
-source_group(FDrive                              FILES ${FDRIVE})
-source_group(FPGA                                FILES ${FPGA})
-source_group(FreqMeter                           FILES ${FREQMETER})
-source_group(Hardware                            FILES ${HARDWARE})
-source_group(Hardware\\CMSIS                     FILES ${HARDWARE_CMSIS})
-source_group(Hardware\\HAL                       FILES ${HARDWARE_HAL})
-source_group(Hardware\\Memory                    FILES ${HARDWARE_MEMORY})
-source_group(Hardware\\USBD                      FILES ${HARDWARE_USBD})
-source_group(Hardware\\USBH                      FILES ${HARDWARE_USBH})
-source_group(libs\\FatFS                         FILES ${LIBS_FATFS})
-source_group(libs\\HAL                           FILES ${LIBS_HAL})
-source_group(libs\\USBD                          FILES ${LIBS_USBD})
-source_group(libs\\USBH                          FILES ${LIBS_USBH})
-source_group(Keyboard                            FILES ${KEYBOARD})
-source_group(Menu                                FILES ${MENU})
-source_group(Menu\\Pages                         FILES ${MENU_PAGES})
-source_group(Menu\\Pages\\Include                FILES ${MENU_PAGES_INCLUDE})
-source_group(Menu\\Pages\\PageDisplay            FILES ${MENU_PAGES_PAGEDISPLAY})
-source_group(Menu\\Pages\\PageFunction           FILES ${MENU_PAGES_PAGEFUNCTION})
-source_group(Menu\\Pages\\PageRecorder           FILES ${MENU_PAGES_PAGERECORDER})
-source_group(Menu\\Pages\\PageHelp               FILES ${MENU_PAGES_PAGEHELP})
-source_group(Menu\\Pages\\PageMeasures           FILES ${MENU_PAGES_PAGEMEASURES})
-source_group(Menu\\Pages\\PageMemory             FILES ${MENU_PAGES_PAGEMEMORY})
-source_group(Menu\\Pages\\PageService            FILES ${MENU_PAGES_PAGESERVICE})
-source_group(Menu\\Pages\\PageService\\PageDebug FILES ${MENU_PAGES_PAGESERVICE_PAGEDEBUG})
-source_group(Menu\\Pages\\PageTrig               FILES ${MENU_PAGES_PAGETRIG})
-source_group(Multimeter                          FILES ${MULTIMETER})
-source_group(Osci                                FILES ${OSCI})
-source_group(Osci\\Display                       FILES ${OSCI_DISPLAY})
-source_group(Osci\\Math                          FILES ${OSCI_MATH})
-source_group(Osci\\Measurements                  FILES ${OSCI_MEASUREMENTS})
-source_group(Recorder                            FILES ${RECORDER})
-source_group(SCPI                                FILES ${SCPI})
-source_group(Settings                            FILES ${SETTINGS})
-source_group(Test                                FILES ${TEST})
-source_group(Tester                              FILES ${TESTER})
-source_group(Utils                               FILES ${UTILS})
-source_group(Utils/Containers                    FILES ${UTILS_CONTAINERS})
-source_group(Utils/Text                          FILES ${UTILS_TEXT})
+source_group(common                             FILES ${COMMON})
+source_group(doc                                FILES ${DOC})
+source_group(_VS                                FILES ${VS})
+source_group(_VS/std_includes                   FILES ${VS_STD_INCLUDES})
+source_group(src                                FILES ${SRC})
+source_group(Display                            FILES ${DISPLAY})
+source_group(Display/Font                       FILES ${DISPLAY_FONT})
+source_group(FDrive                             FILES ${FDRIVE})
+source_group(FPGA                               FILES ${FPGA})
+source_group(FreqMeter                          FILES ${FREQMETER})
+source_group(Hardware                           FILES ${HARDWARE})
+source_group(Hardware/CMSIS                     FILES ${HARDWARE_CMSIS})
+source_group(Hardware/HAL                       FILES ${HARDWARE_HAL})
+source_group(Hardware/Memory                    FILES ${HARDWARE_MEMORY})
+source_group(Hardware/USBD                      FILES ${HARDWARE_USBD})
+source_group(Hardware/USBH                      FILES ${HARDWARE_USBH})
+source_group(libs/FatFS                         FILES ${LIBS_FATFS})
+source_group(libs/HAL                           FILES ${LIBS_HAL})
+source_group(libs/USBD                          FILES ${LIBS_USBD})
+source_group(libs/USBH                          FILES ${LIBS_USBH})
+source_group(Keyboard                           FILES ${KEYBOARD})
+source_group(Menu                               FILES ${MENU})
+source_group(Menu/Pages                         FILES ${MENU_PAGES})
+source_group(Menu/Pages/Include                 FILES ${MENU_PAGES_INCLUDE})
+source_group(Menu/Pages/PageDisplay             FILES ${MENU_PAGES_PAGEDISPLAY})
+source_group(Menu/Pages/PageFunction            FILES ${MENU_PAGES_PAGEFUNCTION})
+source_group(Menu/Pages/PageRecorder            FILES ${MENU_PAGES_PAGERECORDER})
+source_group(Menu/Pages/PageHelp                FILES ${MENU_PAGES_PAGEHELP})
+source_group(Menu/Pages/PageMeasures            FILES ${MENU_PAGES_PAGEMEASURES})
+source_group(Menu/Pages/PageMemory              FILES ${MENU_PAGES_PAGEMEMORY})
+source_group(Menu/Pages/PageService             FILES ${MENU_PAGES_PAGESERVICE})
+source_group(Menu/Pages/PageService/PageDebug   FILES ${MENU_PAGES_PAGESERVICE_PAGEDEBUG})
+source_group(Menu/Pages/PageTrig                FILES ${MENU_PAGES_PAGETRIG})
+source_group(Multimeter                         FILES ${MULTIMETER})
+source_group(Osci                               FILES ${OSCI})
+source_group(Osci/Display                       FILES ${OSCI_DISPLAY})
+source_group(Osci/Math                          FILES ${OSCI_MATH})
+source_group(Osci/Measurements                  FILES ${OSCI_MEASUREMENTS})
+source_group(Recorder                           FILES ${RECORDER})
+source_group(SCPI                               FILES ${SCPI})
+source_group(Settings                           FILES ${SETTINGS})
+source_group(Test                               FILES ${TEST})
+source_group(Tester                             FILES ${TESTER})
+source_group(Utils                              FILES ${UTILS})
+source_group(Utils/Containers                   FILES ${UTILS_CONTAINERS})
+source_group(Utils/Text                         FILES ${UTILS_TEXT})
 
 add_library(${PROJECT_NAME} ${COMMON} ${DOC} ${VS} ${VS_STD_INCLUDES} ${SRC} ${DISPLAY} ${DISPLAY_FONT} ${FDRIVE}
                             ${FPGA} ${FREQMETER} ${HARDWARE} ${HARDWARE_CMSIS} ${HARDWARE_HAL} ${HARDWARE_MEMORY}
